syntax = "proto3";

package com.ajaxproject.api.internal.warehousesvc.input.reqreply.product;

import "com/ajaxproject/api/internal/warehousesvc/commonmodels/product/product.proto";

option java_package = "com.ajaxproject.api.internal.warehousesvc.input.reqreply.product";
option java_multiple_files = true;

message FindAllProductsRequest {}

message FindAllProductsResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message ProductList {
    repeated commonmodels.product.Product product = 1;
  }

  message Success {
    ProductList products = 1;
  }

  message Failure {
    string message = 100;
  }
}
